fix(env): change and add SERVER_CLOUDFLARE_API_TOKEN to env

--- a/.env.production.local.example
+++ b/.env.production.local.example
@@ -3,5 +3,5 @@ ALCHEMY_STATE_TOKEN=
 CLOUDFLARE_API_TOKEN=
 CLOUDFLARE_EMAIL=
 
-# CF API token used for static worker site deployment
-STATIC_CLOUDFLARE_API_TOKEN=
+# CF API token used for site deployment
+SERVER_CLOUDFLARE_API_TOKEN=
