chore: add stricter TypeScript and Biome rules
TypeScript (tsconfig.base.json):
- noImplicitReturns: error when not all code paths return a value
- noImplicitOverride: require override keyword for overridden methods
- allowUnreachableCode: false - error on unreachable code
- allowUnusedLabels: false - error on unused labels

Biome (biome.json):
- noConsole: warn - catch console usage in production code
- useSingleVarDeclarator: error - enforce one variable per declaration
- Added overrides for CLI and alchemy scripts where console is expected

Fixed:
- apps/server/src/index.ts: return next() instead of await next()

--- a/biome.json
+++ b/biome.json
@@ -28,5 +28,27 @@
       "!**/test-results"
     ]
   },
-  "extends": ["ultracite/core", "ultracite/react"]
+  "extends": ["ultracite/core", "ultracite/react"],
+  "linter": {
+    "rules": {
+      "suspicious": {
+        "noConsole": "warn"
+      },
+      "style": {
+        "useSingleVarDeclarator": "error"
+      }
+    }
+  },
+  "overrides": [
+    {
+      "includes": ["apps/cli/**/*", "**/alchemy.run.ts"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noConsole": "off"
+          }
+        }
+      }
+    }
+  ]
 }
